--- a/css/style.css
+++ b/css/style.css
@@ -118,20 +118,41 @@ main{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 3rem;
 }
 .program h1{
   text-align: center;
-  color: white;
+  color: #2D4059;
   font-size: 32pt;
   padding-top: 20px;
 }
-.program li{
+.program ul{
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
+}
+.program li{
   list-style: none;
-  width: 100px;
-  height: 100px;
-  border: solid 1px black;
+  border: 1px solid #2D4059;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+  width: 100vh;
+  height: 80px;
+  font-size: 18pt;
+  text-align: center;
+  color: #2D4059;
+  font-weight: bold;
+}
+.informasi{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.informasi h1{
+  text-align: center;
+  color: #2D4059;
+  font-size: 32pt;
+  padding-top: 20px;
 }
