--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,3 @@
-/* Existing styles */
-
 /* Responsive styles */
 @media screen and (max-width: 1024px) {
   header {
@@ -33,6 +31,12 @@
   .styled-table {
     min-width: 300px;
   }
+
+  .top {
+    width: 40px;
+    height: 40px;
+    font-size: 1.5em;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -59,6 +63,14 @@
     width: 100%;
     height: auto;
   }
+
+  .top {
+    width: 35px;
+    height: 35px;
+    font-size: 1.2em;
+    bottom: 15px;
+    right: 15px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -82,13 +94,15 @@
   footer.kontak a {
     font-size: 14pt;
   }
-}
 
+  .top {
+    width: 30px;
+    height: 30px;
+    font-size: 1em;
+    bottom: 10px;
+    right: 10px;
+  }
 
-/* Existing styles */
-
-/* Responsive styles */
-@media screen and (max-width: 480px) {
   .login-container {
     width: 90%;
   }
